test/libsolidity/syntaxTests/errors/clash_function_error.sol
function Err() pure {}
error Err();
// ----
// DeclarationError 2333: (23-35): Identifier already declared.
